v.1.5.7

[ David Bruce]
       - Changed font to Andika (hopefully will have this in Debian
         and other OS in future so we don't have to bundle it
         indefinitely)
       - Fixed black_outline() to make it work more or less as was
         intended, from what I can tell.

v1.5.6	the "make it simply work, stupid" release (a pun on KISS)

[ Holger Levsen ]
       - tagged as release in svn
       - brought back the tuxtype2 logo
       - updated TODO and README
       - reverted utf8-changes from r16-20, as utf8 support needs more code
         changes
       - workaround debian bug #374062
       - remove funkbrt.it as its not used
       - font-loading is still a ugly hack :-( but works on debian with
         ttf-gentium, which requires a little code-change for a sarge backport
       - macosx and windows version untested...

v1.5.5   development version, not released (still font+sound issues)

[ Calvin Arndt ]
       - closing all the mem leaks I know of 
       - remove redundant print_phrase()
       - remove hard coded xy positions in print_at() (calculate wrapped y position)
       - remove uneeded cast in Phrases()
[ Holger Levsen ]
       - renamed to tuxtype (from tuxtype2), also modified the logo :)
       - Solving the sound file licence issues (removed one (tickle.wav, was
         unused), updated README_SOUNDS.TXT - this is not finished yet!!!!
       - removed all fonts. The font-handling is still a hack,
         see loaders.c - it only uses fonts from ttf-freefont
         and not yet from ttf-dejavu (for non-latini fonts) - and it only
         works on Debian probably (fixed path, not suitable for Windows,
         MacOS and probably other linux distributions)

v1.5.4 - Added Norwegian Bokmål translation. Improved Norwegian
         Nynorsk translation.

v1.5.3 - Initial lesson code started. Changed Set Keyboard to
	 be a project info page. Fixed CometZap random segfaults on